# beamer-software

./: README.md  index.html  package-lock.json  package.json  presentation.html  vite.config.ts
src/: App.vue  main.ts
src-presentation/: App.vue  main.ts
src-presentation/components/: ScreenSizeToggle.vue  SongEditor.vue  SongList.vue  VerseDisplay.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  display_selection.rs  main.rs  querying.rs  song.rs
src/components/: HelloWorld.vue  SelectionDisplay.vue  SongEditor.vue  SongList.vue
src/stores/: displaySelectionStore.ts  settingsStore.ts  songListStore.ts
